// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submit form is invalid 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-1ehejze {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-1ehejze::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze::placeholder {
  color: #727683;
  opacity: 0;
}

.css-1ehejze:hover,
.css-1ehejze:focus {
  border-color: #792dd4;
}

.css-1ehejze:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.css-1ehejze::-webkit-input-placeholder {
  opacity: 1;
}

.css-1ehejze::-moz-placeholder {
  opacity: 1;
}

.css-1ehejze:-ms-input-placeholder {
  opacity: 1;
}

.css-1ehejze::placeholder {
  opacity: 1;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.css-1nhcpqm {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.css-1nhcpqm:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<form>
    <div>
      <div
        class="css-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="css-1ehejze el3h3g92"
          name="toto"
          type="text"
          value="4"
        />
      </div>
      <div
        class="css-1lt3r2p e5hc7t70"
      >
        <div
          class="css-xbtm7g el3h3g94"
        />
      </div>
    </div>
    <button
      class="css-1nhcpqm e112qvla2"
      disabled=""
      type="submit"
    >
      Test
    </button>
  </form>
</DocumentFragment>
`;

exports[`Submit form is submitting 1`] = `
<DocumentFragment>
  .css-1nhcpqm {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.css-1nhcpqm:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-ljs09t {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.css-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<form>
    <button
      class="css-1nhcpqm e112qvla2"
      disabled=""
      type="submit"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="css-ljs09t e1y1n78x1"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          class="css-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
      Test
    </button>
  </form>
</DocumentFragment>
`;

exports[`Submit renders correctly  1`] = `
<DocumentFragment>
  .css-1nhcpqm {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.css-1nhcpqm:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<form>
    <button
      class="css-1nhcpqm e112qvla2"
      disabled=""
      type="submit"
    >
      Test
    </button>
  </form>
</DocumentFragment>
`;

exports[`Submit renders correctly with icon and iconPosition  1`] = `
<DocumentFragment>
  .css-158usla {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.css-158usla:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-znppnv {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-znppnv .fillStroke {
  stroke: currentColor;
  fill: none;
}

<form>
    <button
      class="css-158usla e112qvla2"
      disabled=""
      type="submit"
    >
      <svg
        class="css-znppnv e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M2 8.25c0 .414.336.75.75.75h8.69l-1.22 1.22a.75.75 0 1 0 1.06 1.06l2.5-2.5a.75.75 0 0 0 0-1.06l-2.5-2.5a.75.75 0 1 0-1.06 1.06l1.22 1.22H2.75a.75.75 0 0 0-.75.75"
          fill-rule="evenodd"
        />
      </svg>
      Test
    </button>
  </form>
</DocumentFragment>
`;
